# xdiff-practice

./: Cargo.toml  README.md
examples/: config.rs  similar.rs
fixtures/: config.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
tests/: cli_tests.rs
tests/cmd/: help.trycmd
