[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
atty = "0.2.14"
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.4"
dialoguer = "0.10.2"
http-serde = "1.1.2"
mockito = "0.31.1"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.16"
similar = { version = "2.2.1", features = ["inline"] }
syntect = "5.0.0"
tokio = { version = "1.24.1", features = ["full"] }
trycmd = "0.14.10"
url = { version = "2.3.1", features = ["serde"] }

